# FlashMed

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  pyproject.toml  setup_env.sh
.github/workflows/: ci.yml
configs/: flashmed_ct_seg.yaml  flashmed_pathology.yaml  flashmed_report_gen.yaml  flashmed_xray_cls.yaml
docker/: Dockerfile  docker-compose.yml
docs/: Classification.md  FAQ.md  Home.md  Installation.md  Pathology.md  Quick-Start.md  Report-Generation.md  Segmentation.md
examples/: benchmark_med.py  ct_segmentation.py  pathology_analysis.py  report_generation.py  xray_classification.py
flashmed/: __init__.py  cli.py  registry.py
flashmed/analytics/: __init__.py  benchmark.py  metrics.py
flashmed/cfg/: __init__.py  config.py
flashmed/data/: __init__.py  datasets.py  dicom_utils.py  transforms.py
flashmed/engine/: __init__.py  exporter.py  predictor.py  trainer.py  validator.py
flashmed/explainability/: __init__.py  gradcam.py  shap_explainer.py
flashmed/models/: __init__.py  flashmed_model.py  lora.py
flashmed/models/architectures/: __init__.py  biomed_clip.py  med_vit.py  med_vlm.py  medsam.py  nnunet.py  swin_unetr.py  unet_3d.py
flashmed/privacy/: __init__.py  anonymization.py  differential_privacy.py  federated.py
flashmed/solutions/: __init__.py  diagnostic_assistant.py  pathology_analyzer.py  report_writer.py
flashmed/tasks/: __init__.py  classification.py  detection.py  pathology.py  report_gen.py  segmentation.py
flashmed/uncertainty/: __init__.py  ensemble.py  evidential.py  mc_dropout.py
flashmed/utils/: __init__.py  callbacks.py  io.py  visualize.py
tests/: test_comprehensive.py  test_explainability.py  test_models.py  test_registry.py  test_tasks.py
