[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashmed"
version = "1.0.0"
description = "FlashMed: Medical AI for imaging analysis, diagnostics, and radiology report generation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "FlashVision"},
]
keywords = ["medical-imaging", "radiology", "pathology", "deep-learning", "pytorch", "dicom", "ct-scan", "mri", "xray", "federated-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=9.0.0",
    "PyYAML>=6.0",
    "tqdm>=4.65.0",
    "pydicom>=2.4.0",
    "monai>=1.3.0",
]

[project.optional-dependencies]
privacy = ["opacus>=1.4.0", "flwr>=1.5.0"]
analytics = ["matplotlib>=3.7.0", "pandas>=2.0.0", "scikit-learn>=1.3.0"]
export = ["onnx>=1.14.0", "onnxruntime>=1.15.0"]
all = [
    "opacus>=1.4.0",
    "flwr>=1.5.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
]
dev = ["pytest", "ruff", "pre-commit"]

[project.urls]
Homepage = "https://github.com/FlashVision/FlashMed"
Repository = "https://github.com/FlashVision/FlashMed"
Issues = "https://github.com/FlashVision/FlashMed/issues"

[project.scripts]
flashmed = "flashmed.cli:main"

[tool.setuptools.packages.find]
include = ["flashmed*"]

[tool.ruff]
line-length = 120
